<resources>
    <string name="app_name">Wooser</string>
    <string name="view_title_user">User</string>
    <string name="view_title_create_user">Create User</string>
    <string name="view_title_edit_user">Edit User</string>
    <string name="view_title_backup">Google Drive Backup</string>
    <string name="view_title_create_plan">Plan</string>
    <string name="view_title_create_entry">Weight</string>

    <!--CONTENT PROVIDER-->
    <string name="content_authority" translatable="false">com.mistdev.wooser</string>

    <!--BROADCAST ACTION-->
    <string name="broadcast_logged_user_changed">com.mistdev.wooser.LOGGED_USER_CHANGED</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_item_weight">Weight</string>
    <string name="nav_drawer_item_settings">Settings</string>
    <string name="nav_drawer_item_logout">Logout</string>

    <string name="fragment_title_entries">Entries</string>
    <string name="fragment_title_plan">Plan</string>

    <string name="description_app_presentation_image">App presentation image</string>
    <string name="description_weight_progress_icon">Weight progress icon</string>
    <string name="description_date_progress_icon">Date progress icon</string>
    <string name="description_widget_weight_image_button">Weight button with scale image</string>

    <string name="action_settings">Settings</string>

    <string name="error_create_weight_entry">Error adding your weight entry.\nPlease try again.</string>

    <string name="unit_weight_label">Weight unit</string>
    <string name="unit_height_label">Height unit</string>
    <string name="hint_user_name">Name</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_height">Height</string>
    <string name="hint_current_weight">Current weight</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_body_structure">Body structure</string>
    <string name="hint_lifestyle">Lifestyle</string>
    <string name="hint_weight_date">Date</string>
    <string name="hint_weight_time">Time</string>
    <string name="hint_start_date">Start date</string>
    <string name="hint_goal_date">Goal date</string>
    <string name="hint_start_weight">Start weight</string>
    <string name="hint_goal_weight">Goal weight</string>
    <string-array name="weight_units">
        <item>kg</item>
        <item>lb</item>
    </string-array>
    <string-array name="height_units">
        <item>cm</item>
        <item>ft</item>
    </string-array>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="body_structures">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="life_styles">
        <item>Sedentary</item>
        <item>Lightly active</item>
        <item>Moderately active</item>
        <item>Very active</item>
        <item>Extremely active</item>
    </string-array>
    <string name="weight_variation_not_available">N/A</string>
    <string name="format_bmi">BMI: %s</string>
    <string name="format_weight_kg">%s kg</string>
    <string name="format_weight_lb">%s lb</string>
    <string name="format_height_cm">%s cm</string>
    <string name="format_height_ft">%s ft</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese_1">Obese I</string>
    <string name="obese_2">Obese II</string>
    <string name="obese_3">Obese III</string>
    <string name="plan_create_to_define_goals">Create a new plan to define your goals.</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="plan_time_remaining_format">Time remaining: %s days</string>
    <string name="edit_user">Edit user</string>
    <string name="delete_user">Delete user</string>
    <string name="export_data">Export data</string>
    <string name="import_data">Import data</string>
    <string name="statistics_one_week">1W</string>
    <string name="statistics_one_month">1M</string>
    <string name="statistics_six_months">6M</string>
    <string name="statistics_one_year">1Y</string>
    <string name="dateformat_chart">MMM dd</string>
    <string name="delete">Delete</string>
    <string name="delete_user_dialog_title">Delete user</string>
    <string name="delete_user_dialog_message">You won\'t be able to restore this user\'s data. Delete anyway?</string>
    <string name="error_delete_user">Failed to delete user</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="fab_new_user">New User</string>
    <string name="fab_google_drive">Google Drive Backup</string>
    <string name="backup_download">Import from Google Drive</string>
    <string name="backup_upload">Export to Google Drive</string>
    <string name="backup_download_dialog_message">
        Are you sure you want to import your Wooser data from your Google Drive?
        \n\n
        All your current data will be replaced
    </string>
    <string name="backup_upload_dialog_message">Are you sure you want to export your Wooser data to your Google Drive?</string>
    <string name="backup_download_dialog_confirmation_button">Import</string>
    <string name="backup_upload_dialog_confirmation_button">Export</string>
    <string name="backup_download_dialog_title">Import</string>
    <string name="backup_upload_dialog_title">Export</string>
    <string name="backup_upload_success_message">Data exported to Google Drive</string>
    <string name="backup_download_success_message">Data imported from Google Drive</string>
    <string name="backup_upload_failure_default_message">Could not export your data to Google Drive</string>
    <string name="backup_download_failure_default_message">Could not import your data from Google Drive</string>
    <string name="widget_no_user_logged">Log in</string>
    <string name="validation_empty_field">Must not be empty</string>
    <string name="empty_users_list">Ops!\nNo users found\nCreate a new one by clicking the \'+\' button</string>
    <string name="user_dialog_message_create">Create user?</string>
    <string name="user_dialog_message_edit">Edit user?</string>
    <string name="error_google_play_services">Google Play Services is required</string>

</resources>
