<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/cards_corner_radius_default"
    app:cardElevation="@dimen/elevation_level_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/cards_header_height_small"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_one_week"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/StatisticsPeriodButtonStyle"
                android:text="@string/statistics_one_week"/>

            <Button
                android:id="@+id/btn_one_month"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/StatisticsPeriodButtonStyle"
                android:text="@string/statistics_one_month"/>

            <Button
                android:id="@+id/btn_six_months"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/StatisticsPeriodButtonStyle"
                android:text="@string/statistics_six_months"/>

            <Button
                android:id="@+id/btn_one_year"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/StatisticsPeriodButtonStyle"
                android:text="@string/statistics_one_year"/>
        </LinearLayout>

        <lecho.lib.hellocharts.view.LineChartView
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cards_body_height_large"
            android:padding="@dimen/padding_small"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/cards_footer_height_small"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                android:id="@+id/btn_statistics_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_cards_margin_default"
                android:layout_marginRight="@dimen/spacing_cards_margin_default"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ripple_custom"
                android:textColor="@color/colorPrimary"
                android:text="@string/details"/>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>