<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mistdev.wooser.user.UserActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <include
                android:id="@+id/layout_units"
                layout="@layout/layout_units"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spacing_forms_vertical_padding_default">

                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/hint_user_name"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spacing_forms_vertical_padding_default">

                <EditText
                    android:id="@+id/et_user_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/hint_height"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinput_user_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spacing_forms_vertical_padding_default">

                <EditText
                    android:id="@+id/et_user_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/hint_current_weight"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spacing_forms_vertical_padding_default">

                <EditText
                    android:id="@+id/et_birthday"
                    style="@style/EditTextDialogOpenerStyle"
                    android:hint="@string/hint_birthday" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spacing_forms_vertical_padding_default">

                <EditText
                    android:id="@+id/et_user_gender"
                    style="@style/EditTextDialogOpenerStyle"
                    android:hint="@string/hint_gender" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spacing_forms_vertical_padding_default">

                <EditText
                    android:id="@+id/et_body_structure"
                    style="@style/EditTextDialogOpenerStyle"
                    android:hint="@string/hint_body_structure" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spacing_forms_vertical_padding_default">

                <EditText
                    android:id="@+id/et_lifestyle"
                    style="@style/EditTextDialogOpenerStyle"
                    android:hint="@string/hint_lifestyle" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_confirm_user_creation"
        android:layout_width="@dimen/fab_size_defult"
        android:layout_height="@dimen/fab_size_defult"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/scrollview"
        app:layout_anchorGravity="bottom|end"
        android:src="@drawable/ic_check_white_24dp"/>

</android.support.design.widget.CoordinatorLayout>
