<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mistdev.wooser.createEntry.CreateEntryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spacing_forms_vertical_padding_default">

                <EditText
                    android:id="@+id/et_entry_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/hint_weight" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spacing_forms_vertical_padding_default">

                <EditText
                    android:id="@+id/et_entry_date"
                    style="@style/EditTextDialogOpenerStyle"
                    android:hint="@string/hint_weight_date" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spacing_forms_vertical_padding_default">

                <EditText
                    android:id="@+id/et_entry_time"
                    style="@style/EditTextDialogOpenerStyle"
                    android:hint="@string/hint_weight_time" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_create_entry"
        android:layout_width="@dimen/fab_size_defult"
        android:layout_height="@dimen/fab_size_defult"
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_check_white_24dp"/>

</android.support.design.widget.CoordinatorLayout>
